Added several tests, getting more stable now, needs refactoring again though...

--- a/Photon/Photon.Data.csproj
+++ b/Photon/Photon.Data.csproj
@@ -51,6 +51,8 @@
     <Compile Include="Record.cs" />
     <Compile Include="RecordSet.cs" />
     <Compile Include="RecordSetColumn.cs" />
+    <Compile Include="With_Converter.cs" />
+    <Compile Include="ConverterSpecification.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
