--- a/Photon.Data.Tests/Photon.Data.Tests.csproj
+++ b/Photon.Data.Tests/Photon.Data.Tests.csproj
@@ -35,12 +35,15 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="System.Core" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <Compile Include="With_Converter.cs" />
     <Compile Include="With_RecordSet.cs" />
     <Compile Include="Specifications\ConverterSpecification.cs" />
+    <Compile Include="With_ColumnData.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Photon\Photon.Data.csproj">
