--- a/Photon.Data.Sample/Photon.Data.Sample.csproj
+++ b/Photon.Data.Sample/Photon.Data.Sample.csproj
@@ -11,6 +11,7 @@
     <RootNamespace>Photon.Data.Sample</RootNamespace>
     <MonoMacResourcePrefix>Resources</MonoMacResourcePrefix>
     <AssemblyName>Photon.Data.Sample</AssemblyName>
+    <SuppressXamMacUpsell>True</SuppressXamMacUpsell>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
