Named column support, more tests, some tweeks based on code analysis

--- a/Photon.CoreLib/Photon.CoreLib.csproj
+++ b/Photon.CoreLib/Photon.CoreLib.csproj
@@ -25,6 +25,7 @@
         <Command type="BeforeExecute" />
       </CustomCommands>
     </CustomCommands>
+    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
