--- a/Photon.Data/Photon.Data.csproj
+++ b/Photon.Data/Photon.Data.csproj
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <CodeAnalysisRuleSet>ExtendedDesignGuidelineRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -43,10 +44,13 @@
     <Compile Include="ColumnData.cs" />
     <Compile Include="ColumnDataNullable.cs" />
     <Compile Include="ColumnDataStore.cs" />
+    <Compile Include="ExceptionFactory.cs" />
+    <Compile Include="IColumn.cs" />
     <Compile Include="IColumnData.cs" />
     <Compile Include="IRecord.cs" />
-    <Compile Include="Record.cs" />
+    <Compile Include="RecordSetRecord.cs" />
     <Compile Include="RecordSet.cs" />
+    <Compile Include="RecordSetColumn.cs" />
     <Compile Include="RecordSetColumnCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
