--- a/Photon.Data.Tests/Photon.Data.Tests.csproj
+++ b/Photon.Data.Tests/Photon.Data.Tests.csproj
@@ -20,6 +20,7 @@
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
     <Commandlineparameters>--profile=monocov</Commandlineparameters>
+    <CodeAnalysisRuleSet>ExtendedDesignGuidelineRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>full</DebugType>
@@ -40,6 +41,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
+    <Compile Include="With_RecordSet.cs" />
     <Compile Include="With_RecordSet_Row.cs" />
   </ItemGroup>
   <ItemGroup>
