--- a/Photon.CoreLib/Photon.CoreLib.csproj
+++ b/Photon.CoreLib/Photon.CoreLib.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Arrays.cs" />
     <Compile Include="Generics.cs" />
     <Compile Include="ConverterGenerator.cs" />
     <Compile Include="GenericType.cs" />
