Support for change notification

--- a/Photon.Data/Photon.Data.csproj
+++ b/Photon.Data/Photon.Data.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ColumnData.cs" />
+    <Compile Include="ColumnDataBase.cs" />
     <Compile Include="ColumnDataFactory.cs" />
     <Compile Include="ColumnDataNullable.cs" />
     <Compile Include="ColumnDataStore.cs" />
