--- a/Photon.Data.Tests/Photon.Data.Tests.csproj
+++ b/Photon.Data.Tests/Photon.Data.Tests.csproj
@@ -33,6 +33,7 @@
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
     </Reference>
